tcompil.output
Grammaire

    0 $accept: Prog $end

    1 Prog: DeclConsts DeclVars DeclFoncts

    2 DeclConsts: DeclConsts CONST ListConst ';'
    3           | %empty

    4 ListConst: ListConst ',' IDENT '=' Litteral
    5          | IDENT '=' Litteral

    6 Litteral: NombreSigne
    7         | CARACTERE

    8 NombreSigne: NUM
    9            | ADDSUB NUM

   10 DeclVars: DeclVars TYPE Declarateurs ';'
   11         | %empty

   12 Declarateurs: Declarateurs ',' Declarateur
   13             | Declarateur

   14 Declarateur: IDENT
   15            | IDENT '[' NUM ']'

   16 DeclFoncts: DeclFoncts DeclFonct
   17           | DeclFonct

   18 DeclFonct: EnTeteFonct Corps

   19 $@1: %empty

   20 EnTeteFonct: TYPE IDENT '(' $@1 Parametres ')'

   21 $@2: %empty

   22 EnTeteFonct: VOID IDENT '(' $@2 Parametres ')'

   23 Parametres: VOID
   24           | ListTypVar

   25 ListTypVar: ListTypVar ',' TYPE IDENT
   26           | TYPE IDENT

   27 Corps: '{' DeclConsts DeclVars SuiteInstr '}'

   28 SuiteInstr: SuiteInstr Instr
   29           | %empty

   30 DEBUTIF: %empty

   31 DEBUTELSE: %empty

   32 ENDIF: %empty

   33 DEBUTWHILE: %empty

   34 Instr: Exp ';'
   35      | ';'
   36      | RETURN Exp ';'
   37      | RETURN ';'
   38      | READE '(' IDENT ')' ';'
   39      | READC '(' IDENT ')' ';'
   40      | PRINT '(' Exp ')' ';'
   41      | DEBUTIF IF '(' Exp ')' ENDIF Instr
   42      | DEBUTIF IF '(' Exp ')' ENDIF Instr ELSE DEBUTELSE Instr

   43 $@3: %empty

   44 Instr: DEBUTWHILE WHILE '(' Exp ')' $@3 Instr
   45      | '{' SuiteInstr '}'

   46 Exp: LValue '=' Exp
   47    | EB

   48 EB: EB OR TB
   49   | TB

   50 TB: TB AND FB
   51   | FB

   52 FB: FB EQ M
   53   | M

   54 M: M ORDER E
   55  | E

   56 E: E ADDSUB T
   57  | T

   58 T: T DIVSTAR F
   59  | F

   60 F: ADDSUB F
   61  | '!' F
   62  | '(' Exp ')'
   63  | LValue
   64  | NUM
   65  | CARACTERE

   66 $@4: %empty

   67 F: IDENT $@4 '(' Arguments ')'

   68 LValue: IDENT
   69       | IDENT '[' Exp ']'

   70 Arguments: ListExp
   71          | %empty

   72 ListExp: ListExp ',' Exp
   73        | Exp


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 61
'(' (40) 20 22 38 39 40 41 42 44 62 67
')' (41) 20 22 38 39 40 41 42 44 62 67
',' (44) 4 12 25 72
';' (59) 2 10 34 35 36 37 38 39 40
'=' (61) 4 5 46
'[' (91) 15 69
']' (93) 15 69
'{' (123) 27 45
'}' (125) 27 45
error (256)
CARACTERE (258) 7 65
NUM (259) 8 9 15 64
IDENT (260) 4 5 14 15 20 22 25 26 38 39 67 68 69
ORDER (261) 54
EQ (262) 52
ADDSUB (263) 9 56 60
DIVSTAR (264) 58
TYPE (265) 10 20 25 26
OR (266) 48
AND (267) 50
CONST (268) 2
IF (269) 41 42
WHILE (270) 44
RETURN (271) 36 37
VOID (272) 22 23
READE (273) 38
READC (274) 39
PRINT (275) 40
ELSE (276) 42


Non-terminaux, suivis des règles où ils apparaissent

$accept (32)
    à gauche: 0
Prog (33)
    à gauche: 1, à droite: 0
DeclConsts (34)
    à gauche: 2 3, à droite: 1 2 27
ListConst (35)
    à gauche: 4 5, à droite: 2 4
Litteral (36)
    à gauche: 6 7, à droite: 4 5
NombreSigne (37)
    à gauche: 8 9, à droite: 6
DeclVars (38)
    à gauche: 10 11, à droite: 1 10 27
Declarateurs (39)
    à gauche: 12 13, à droite: 10 12
Declarateur (40)
    à gauche: 14 15, à droite: 12 13
DeclFoncts (41)
    à gauche: 16 17, à droite: 1 16
DeclFonct (42)
    à gauche: 18, à droite: 16 17
EnTeteFonct (43)
    à gauche: 20 22, à droite: 18
$@1 (44)
    à gauche: 19, à droite: 20
$@2 (45)
    à gauche: 21, à droite: 22
Parametres (46)
    à gauche: 23 24, à droite: 20 22
ListTypVar (47)
    à gauche: 25 26, à droite: 24 25
Corps (48)
    à gauche: 27, à droite: 18
SuiteInstr (49)
    à gauche: 28 29, à droite: 27 28 45
DEBUTIF (50)
    à gauche: 30, à droite: 41 42
DEBUTELSE (51)
    à gauche: 31, à droite: 42
ENDIF (52)
    à gauche: 32, à droite: 41 42
DEBUTWHILE (53)
    à gauche: 33, à droite: 44
Instr (54)
    à gauche: 34 35 36 37 38 39 40 41 42 44 45, à droite: 28 41 42
    44
$@3 (55)
    à gauche: 43, à droite: 44
Exp (56)
    à gauche: 46 47, à droite: 34 36 40 41 42 44 46 62 69 72 73
EB (57)
    à gauche: 48 49, à droite: 47 48
TB (58)
    à gauche: 50 51, à droite: 48 49 50
FB (59)
    à gauche: 52 53, à droite: 50 51 52
M (60)
    à gauche: 54 55, à droite: 52 53 54
E (61)
    à gauche: 56 57, à droite: 54 55 56
T (62)
    à gauche: 58 59, à droite: 56 57 58
F (63)
    à gauche: 60 61 62 63 64 65 67, à droite: 58 59 60 61
$@4 (64)
    à gauche: 66, à droite: 67
LValue (65)
    à gauche: 68 69, à droite: 46 63
Arguments (66)
    à gauche: 70 71, à droite: 67
ListExp (67)
    à gauche: 72 73, à droite: 70 72


État 0

    0 $accept: . Prog $end

    $défaut  réduction par utilisation de la règle 3 (DeclConsts)

    Prog        aller à l'état 1
    DeclConsts  aller à l'état 2


État 1

    0 $accept: Prog . $end

    $end  décalage et aller à l'état 3


État 2

    1 Prog: DeclConsts . DeclVars DeclFoncts
    2 DeclConsts: DeclConsts . CONST ListConst ';'

    CONST  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 11 (DeclVars)

    DeclVars  aller à l'état 5


État 3

    0 $accept: Prog $end .

    $défaut  accepter


État 4

    2 DeclConsts: DeclConsts CONST . ListConst ';'

    IDENT  décalage et aller à l'état 6

    ListConst  aller à l'état 7


État 5

    1 Prog: DeclConsts DeclVars . DeclFoncts
   10 DeclVars: DeclVars . TYPE Declarateurs ';'

    TYPE  décalage et aller à l'état 8
    VOID  décalage et aller à l'état 9

    DeclFoncts   aller à l'état 10
    DeclFonct    aller à l'état 11
    EnTeteFonct  aller à l'état 12


État 6

    5 ListConst: IDENT . '=' Litteral

    '='  décalage et aller à l'état 13


État 7

    2 DeclConsts: DeclConsts CONST ListConst . ';'
    4 ListConst: ListConst . ',' IDENT '=' Litteral

    ','  décalage et aller à l'état 14
    ';'  décalage et aller à l'état 15


État 8

   10 DeclVars: DeclVars TYPE . Declarateurs ';'
   20 EnTeteFonct: TYPE . IDENT '(' $@1 Parametres ')'

    IDENT  décalage et aller à l'état 16

    Declarateurs  aller à l'état 17
    Declarateur   aller à l'état 18


État 9

   22 EnTeteFonct: VOID . IDENT '(' $@2 Parametres ')'

    IDENT  décalage et aller à l'état 19


État 10

    1 Prog: DeclConsts DeclVars DeclFoncts .
   16 DeclFoncts: DeclFoncts . DeclFonct

    TYPE  décalage et aller à l'état 20
    VOID  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 1 (Prog)

    DeclFonct    aller à l'état 21
    EnTeteFonct  aller à l'état 12


État 11

   17 DeclFoncts: DeclFonct .

    $défaut  réduction par utilisation de la règle 17 (DeclFoncts)


État 12

   18 DeclFonct: EnTeteFonct . Corps

    '{'  décalage et aller à l'état 22

    Corps  aller à l'état 23


État 13

    5 ListConst: IDENT '=' . Litteral

    CARACTERE  décalage et aller à l'état 24
    NUM        décalage et aller à l'état 25
    ADDSUB     décalage et aller à l'état 26

    Litteral     aller à l'état 27
    NombreSigne  aller à l'état 28


État 14

    4 ListConst: ListConst ',' . IDENT '=' Litteral

    IDENT  décalage et aller à l'état 29


État 15

    2 DeclConsts: DeclConsts CONST ListConst ';' .

    $défaut  réduction par utilisation de la règle 2 (DeclConsts)


État 16

   14 Declarateur: IDENT .
   15            | IDENT . '[' NUM ']'
   20 EnTeteFonct: TYPE IDENT . '(' $@1 Parametres ')'

    '['  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 14 (Declarateur)


État 17

   10 DeclVars: DeclVars TYPE Declarateurs . ';'
   12 Declarateurs: Declarateurs . ',' Declarateur

    ','  décalage et aller à l'état 32
    ';'  décalage et aller à l'état 33


État 18

   13 Declarateurs: Declarateur .

    $défaut  réduction par utilisation de la règle 13 (Declarateurs)


État 19

   22 EnTeteFonct: VOID IDENT . '(' $@2 Parametres ')'

    '('  décalage et aller à l'état 34


État 20

   20 EnTeteFonct: TYPE . IDENT '(' $@1 Parametres ')'

    IDENT  décalage et aller à l'état 35


État 21

   16 DeclFoncts: DeclFoncts DeclFonct .

    $défaut  réduction par utilisation de la règle 16 (DeclFoncts)


État 22

   27 Corps: '{' . DeclConsts DeclVars SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 3 (DeclConsts)

    DeclConsts  aller à l'état 36


État 23

   18 DeclFonct: EnTeteFonct Corps .

    $défaut  réduction par utilisation de la règle 18 (DeclFonct)


État 24

    7 Litteral: CARACTERE .

    $défaut  réduction par utilisation de la règle 7 (Litteral)


État 25

    8 NombreSigne: NUM .

    $défaut  réduction par utilisation de la règle 8 (NombreSigne)


État 26

    9 NombreSigne: ADDSUB . NUM

    NUM  décalage et aller à l'état 37


État 27

    5 ListConst: IDENT '=' Litteral .

    $défaut  réduction par utilisation de la règle 5 (ListConst)


État 28

    6 Litteral: NombreSigne .

    $défaut  réduction par utilisation de la règle 6 (Litteral)


État 29

    4 ListConst: ListConst ',' IDENT . '=' Litteral

    '='  décalage et aller à l'état 38


État 30

   15 Declarateur: IDENT '[' . NUM ']'

    NUM  décalage et aller à l'état 39


État 31

   20 EnTeteFonct: TYPE IDENT '(' . $@1 Parametres ')'

    $défaut  réduction par utilisation de la règle 19 ($@1)

    $@1  aller à l'état 40


État 32

   12 Declarateurs: Declarateurs ',' . Declarateur

    IDENT  décalage et aller à l'état 41

    Declarateur  aller à l'état 42


État 33

   10 DeclVars: DeclVars TYPE Declarateurs ';' .

    $défaut  réduction par utilisation de la règle 10 (DeclVars)


État 34

   22 EnTeteFonct: VOID IDENT '(' . $@2 Parametres ')'

    $défaut  réduction par utilisation de la règle 21 ($@2)

    $@2  aller à l'état 43


État 35

   20 EnTeteFonct: TYPE IDENT . '(' $@1 Parametres ')'

    '('  décalage et aller à l'état 31


État 36

    2 DeclConsts: DeclConsts . CONST ListConst ';'
   27 Corps: '{' DeclConsts . DeclVars SuiteInstr '}'

    CONST  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 11 (DeclVars)

    DeclVars  aller à l'état 44


État 37

    9 NombreSigne: ADDSUB NUM .

    $défaut  réduction par utilisation de la règle 9 (NombreSigne)


État 38

    4 ListConst: ListConst ',' IDENT '=' . Litteral

    CARACTERE  décalage et aller à l'état 24
    NUM        décalage et aller à l'état 25
    ADDSUB     décalage et aller à l'état 26

    Litteral     aller à l'état 45
    NombreSigne  aller à l'état 28


État 39

   15 Declarateur: IDENT '[' NUM . ']'

    ']'  décalage et aller à l'état 46


État 40

   20 EnTeteFonct: TYPE IDENT '(' $@1 . Parametres ')'

    TYPE  décalage et aller à l'état 47
    VOID  décalage et aller à l'état 48

    Parametres  aller à l'état 49
    ListTypVar  aller à l'état 50


État 41

   14 Declarateur: IDENT .
   15            | IDENT . '[' NUM ']'

    '['  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 14 (Declarateur)


État 42

   12 Declarateurs: Declarateurs ',' Declarateur .

    $défaut  réduction par utilisation de la règle 12 (Declarateurs)


État 43

   22 EnTeteFonct: VOID IDENT '(' $@2 . Parametres ')'

    TYPE  décalage et aller à l'état 47
    VOID  décalage et aller à l'état 48

    Parametres  aller à l'état 51
    ListTypVar  aller à l'état 50


État 44

   10 DeclVars: DeclVars . TYPE Declarateurs ';'
   27 Corps: '{' DeclConsts DeclVars . SuiteInstr '}'

    TYPE  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 29 (SuiteInstr)

    SuiteInstr  aller à l'état 53


État 45

    4 ListConst: ListConst ',' IDENT '=' Litteral .

    $défaut  réduction par utilisation de la règle 4 (ListConst)


État 46

   15 Declarateur: IDENT '[' NUM ']' .

    $défaut  réduction par utilisation de la règle 15 (Declarateur)


État 47

   26 ListTypVar: TYPE . IDENT

    IDENT  décalage et aller à l'état 54


État 48

   23 Parametres: VOID .

    $défaut  réduction par utilisation de la règle 23 (Parametres)


État 49

   20 EnTeteFonct: TYPE IDENT '(' $@1 Parametres . ')'

    ')'  décalage et aller à l'état 55


État 50

   24 Parametres: ListTypVar .
   25 ListTypVar: ListTypVar . ',' TYPE IDENT

    ','  décalage et aller à l'état 56

    $défaut  réduction par utilisation de la règle 24 (Parametres)


État 51

   22 EnTeteFonct: VOID IDENT '(' $@2 Parametres . ')'

    ')'  décalage et aller à l'état 57


État 52

   10 DeclVars: DeclVars TYPE . Declarateurs ';'

    IDENT  décalage et aller à l'état 41

    Declarateurs  aller à l'état 17
    Declarateur   aller à l'état 18


État 53

   27 Corps: '{' DeclConsts DeclVars SuiteInstr . '}'
   28 SuiteInstr: SuiteInstr . Instr

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    RETURN     décalage et aller à l'état 62
    READE      décalage et aller à l'état 63
    READC      décalage et aller à l'état 64
    PRINT      décalage et aller à l'état 65
    ';'        décalage et aller à l'état 66
    '('        décalage et aller à l'état 67
    '{'        décalage et aller à l'état 68
    '}'        décalage et aller à l'état 69
    '!'        décalage et aller à l'état 70

    WHILE     réduction par utilisation de la règle 33 (DEBUTWHILE)
    $défaut  réduction par utilisation de la règle 30 (DEBUTIF)

    DEBUTIF     aller à l'état 71
    DEBUTWHILE  aller à l'état 72
    Instr       aller à l'état 73
    Exp         aller à l'état 74
    EB          aller à l'état 75
    TB          aller à l'état 76
    FB          aller à l'état 77
    M           aller à l'état 78
    E           aller à l'état 79
    T           aller à l'état 80
    F           aller à l'état 81
    LValue      aller à l'état 82


État 54

   26 ListTypVar: TYPE IDENT .

    $défaut  réduction par utilisation de la règle 26 (ListTypVar)


État 55

   20 EnTeteFonct: TYPE IDENT '(' $@1 Parametres ')' .

    $défaut  réduction par utilisation de la règle 20 (EnTeteFonct)


État 56

   25 ListTypVar: ListTypVar ',' . TYPE IDENT

    TYPE  décalage et aller à l'état 83


État 57

   22 EnTeteFonct: VOID IDENT '(' $@2 Parametres ')' .

    $défaut  réduction par utilisation de la règle 22 (EnTeteFonct)


État 58

   65 F: CARACTERE .

    $défaut  réduction par utilisation de la règle 65 (F)


État 59

   64 F: NUM .

    $défaut  réduction par utilisation de la règle 64 (F)


État 60

   67 F: IDENT . $@4 '(' Arguments ')'
   68 LValue: IDENT .
   69       | IDENT . '[' Exp ']'

    '['  décalage et aller à l'état 84

    '('       réduction par utilisation de la règle 66 ($@4)
    $défaut  réduction par utilisation de la règle 68 (LValue)

    $@4  aller à l'état 85


État 61

   60 F: ADDSUB . F

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    F       aller à l'état 86
    LValue  aller à l'état 87


État 62

   36 Instr: RETURN . Exp ';'
   37      | RETURN . ';'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    ';'        décalage et aller à l'état 88
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 89
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 63

   38 Instr: READE . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 90


État 64

   39 Instr: READC . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 91


État 65

   40 Instr: PRINT . '(' Exp ')' ';'

    '('  décalage et aller à l'état 92


État 66

   35 Instr: ';' .

    $défaut  réduction par utilisation de la règle 35 (Instr)


État 67

   62 F: '(' . Exp ')'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 93
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 68

   45 Instr: '{' . SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 29 (SuiteInstr)

    SuiteInstr  aller à l'état 94


État 69

   27 Corps: '{' DeclConsts DeclVars SuiteInstr '}' .

    $défaut  réduction par utilisation de la règle 27 (Corps)


État 70

   61 F: '!' . F

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    F       aller à l'état 95
    LValue  aller à l'état 87


État 71

   41 Instr: DEBUTIF . IF '(' Exp ')' ENDIF Instr
   42      | DEBUTIF . IF '(' Exp ')' ENDIF Instr ELSE DEBUTELSE Instr

    IF  décalage et aller à l'état 96


État 72

   44 Instr: DEBUTWHILE . WHILE '(' Exp ')' $@3 Instr

    WHILE  décalage et aller à l'état 97


État 73

   28 SuiteInstr: SuiteInstr Instr .

    $défaut  réduction par utilisation de la règle 28 (SuiteInstr)


État 74

   34 Instr: Exp . ';'

    ';'  décalage et aller à l'état 98


État 75

   47 Exp: EB .
   48 EB: EB . OR TB

    OR  décalage et aller à l'état 99

    $défaut  réduction par utilisation de la règle 47 (Exp)


État 76

   49 EB: TB .
   50 TB: TB . AND FB

    AND  décalage et aller à l'état 100

    $défaut  réduction par utilisation de la règle 49 (EB)


État 77

   51 TB: FB .
   52 FB: FB . EQ M

    EQ  décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 51 (TB)


État 78

   53 FB: M .
   54 M: M . ORDER E

    ORDER  décalage et aller à l'état 102

    $défaut  réduction par utilisation de la règle 53 (FB)


État 79

   55 M: E .
   56 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 103

    $défaut  réduction par utilisation de la règle 55 (M)


État 80

   57 E: T .
   58 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 57 (E)


État 81

   59 T: F .

    $défaut  réduction par utilisation de la règle 59 (T)


État 82

   46 Exp: LValue . '=' Exp
   63 F: LValue .

    '='  décalage et aller à l'état 105

    $défaut  réduction par utilisation de la règle 63 (F)


État 83

   25 ListTypVar: ListTypVar ',' TYPE . IDENT

    IDENT  décalage et aller à l'état 106


État 84

   69 LValue: IDENT '[' . Exp ']'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 107
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 85

   67 F: IDENT $@4 . '(' Arguments ')'

    '('  décalage et aller à l'état 108


État 86

   60 F: ADDSUB F .

    $défaut  réduction par utilisation de la règle 60 (F)


État 87

   63 F: LValue .

    $défaut  réduction par utilisation de la règle 63 (F)


État 88

   37 Instr: RETURN ';' .

    $défaut  réduction par utilisation de la règle 37 (Instr)


État 89

   36 Instr: RETURN Exp . ';'

    ';'  décalage et aller à l'état 109


État 90

   38 Instr: READE '(' . IDENT ')' ';'

    IDENT  décalage et aller à l'état 110


État 91

   39 Instr: READC '(' . IDENT ')' ';'

    IDENT  décalage et aller à l'état 111


État 92

   40 Instr: PRINT '(' . Exp ')' ';'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 112
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 93

   62 F: '(' Exp . ')'

    ')'  décalage et aller à l'état 113


État 94

   28 SuiteInstr: SuiteInstr . Instr
   45 Instr: '{' SuiteInstr . '}'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    RETURN     décalage et aller à l'état 62
    READE      décalage et aller à l'état 63
    READC      décalage et aller à l'état 64
    PRINT      décalage et aller à l'état 65
    ';'        décalage et aller à l'état 66
    '('        décalage et aller à l'état 67
    '{'        décalage et aller à l'état 68
    '}'        décalage et aller à l'état 114
    '!'        décalage et aller à l'état 70

    WHILE     réduction par utilisation de la règle 33 (DEBUTWHILE)
    $défaut  réduction par utilisation de la règle 30 (DEBUTIF)

    DEBUTIF     aller à l'état 71
    DEBUTWHILE  aller à l'état 72
    Instr       aller à l'état 73
    Exp         aller à l'état 74
    EB          aller à l'état 75
    TB          aller à l'état 76
    FB          aller à l'état 77
    M           aller à l'état 78
    E           aller à l'état 79
    T           aller à l'état 80
    F           aller à l'état 81
    LValue      aller à l'état 82


État 95

   61 F: '!' F .

    $défaut  réduction par utilisation de la règle 61 (F)


État 96

   41 Instr: DEBUTIF IF . '(' Exp ')' ENDIF Instr
   42      | DEBUTIF IF . '(' Exp ')' ENDIF Instr ELSE DEBUTELSE Instr

    '('  décalage et aller à l'état 115


État 97

   44 Instr: DEBUTWHILE WHILE . '(' Exp ')' $@3 Instr

    '('  décalage et aller à l'état 116


État 98

   34 Instr: Exp ';' .

    $défaut  réduction par utilisation de la règle 34 (Instr)


État 99

   48 EB: EB OR . TB

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    TB      aller à l'état 117
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 87


État 100

   50 TB: TB AND . FB

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    FB      aller à l'état 118
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 87


État 101

   52 FB: FB EQ . M

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    M       aller à l'état 119
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 87


État 102

   54 M: M ORDER . E

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    E       aller à l'état 120
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 87


État 103

   56 E: E ADDSUB . T

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    T       aller à l'état 121
    F       aller à l'état 81
    LValue  aller à l'état 87


État 104

   58 T: T DIVSTAR . F

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    F       aller à l'état 122
    LValue  aller à l'état 87


État 105

   46 Exp: LValue '=' . Exp

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 123
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 106

   25 ListTypVar: ListTypVar ',' TYPE IDENT .

    $défaut  réduction par utilisation de la règle 25 (ListTypVar)


État 107

   69 LValue: IDENT '[' Exp . ']'

    ']'  décalage et aller à l'état 124


État 108

   67 F: IDENT $@4 '(' . Arguments ')'

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 71 (Arguments)

    Exp        aller à l'état 125
    EB         aller à l'état 75
    TB         aller à l'état 76
    FB         aller à l'état 77
    M          aller à l'état 78
    E          aller à l'état 79
    T          aller à l'état 80
    F          aller à l'état 81
    LValue     aller à l'état 82
    Arguments  aller à l'état 126
    ListExp    aller à l'état 127


État 109

   36 Instr: RETURN Exp ';' .

    $défaut  réduction par utilisation de la règle 36 (Instr)


État 110

   38 Instr: READE '(' IDENT . ')' ';'

    ')'  décalage et aller à l'état 128


État 111

   39 Instr: READC '(' IDENT . ')' ';'

    ')'  décalage et aller à l'état 129


État 112

   40 Instr: PRINT '(' Exp . ')' ';'

    ')'  décalage et aller à l'état 130


État 113

   62 F: '(' Exp ')' .

    $défaut  réduction par utilisation de la règle 62 (F)


État 114

   45 Instr: '{' SuiteInstr '}' .

    $défaut  réduction par utilisation de la règle 45 (Instr)


État 115

   41 Instr: DEBUTIF IF '(' . Exp ')' ENDIF Instr
   42      | DEBUTIF IF '(' . Exp ')' ENDIF Instr ELSE DEBUTELSE Instr

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 131
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 116

   44 Instr: DEBUTWHILE WHILE '(' . Exp ')' $@3 Instr

    CARACTERE  décalage et aller à l'état 58
    NUM        décalage et aller à l'état 59
    IDENT      décalage et aller à l'état 60
    ADDSUB     décalage et aller à l'état 61
    '('        décalage et aller à l'état 67
    '!'        décalage et aller à l'état 70

    Exp     aller à l'état 132
    EB      aller à l'état 75
    TB      aller à l'état 76
    FB      aller à l'état 77
    M       aller à l'état 78
    E       aller à l'état 79
    T       aller à l'état 80
    F       aller à l'état 81
    LValue  aller à l'état 82


État 117

   48 EB: EB OR TB .
   50 TB: TB . AND FB

    AND  décalage et aller à l'état 100

    $défaut  réduction par utilisation de la règle 48 (EB)


État 118

   50 TB: TB AND FB .
   52 FB: FB . EQ M

    EQ  décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 50 (TB)


État 119

   52 FB: FB EQ M .
   54 M: M . ORDER E

    ORDER  décalage et aller à l'état 102

    $défaut  réduction par utilisation de la règle 52 (FB)


État 120

   54 M: M ORDER E .
   56 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 103

    $défaut  réduction par utilisation de la règle 54 (M)


État 121

   56 E: E ADDSUB T .
   58 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 56 (E)


État 122

   58 T: T DIVSTAR F .

    $défaut  réduction par utilisation de la règle 58 (T)


État 123

   46 Exp: LValue '=' Exp .

    $défaut  réduction par utilisation de la règle 46 (Exp)


État 124

   69 LValue: IDENT '[' Exp ']' .

    $défaut  réduction par utilisation de la règle 69 (LValue)


État 125

   73 ListExp: Exp .

    $défaut  réduction par utilisation de la règle 73 (ListExp)


État 126

   67 F: IDENT $@4 '(' Arguments . ')'

    ')'  décalage et aller à l'état 133


État 127

   70 Arguments: ListExp .
   72 ListExp: ListExp . ',' Exp

    ','  décalage et aller à l'état 134

    $défaut  réduction par utilisation de la règle 70 (Arguments)


État 128

   38 Instr: READE '(' IDENT ')' . ';'

    ';'  décalage et aller à l'état 135


État 129

   39 Instr: READC '(' IDENT ')' . ';'

    ';'  décalage et aller à l'état 136


État 130

   40 Instr: PRINT '(' Exp ')' . ';'

    ';'  décalage et aller à l'état 137


État 131
